<resources>
    <string name="app_name">Gateway to Olympus 1000</string>
    <string name="play_btn">play button</string>

    <string name="back_btn">back button</string>
    <string name="first_game_btn">MemorizeGame</string>
    <string name="second_game_btn">FindCardsGame</string>
    <string name="three_game_btn">PuzzleGame</string>

    <string name="btn_first_day">btn first day</string>
    <string name="btn_second_day">btn second day</string>
    <string name="three_day_btn">three day btn</string>

    <string name="title_settings">Settings</string>
    <string name="reset_settings_text"><u>reset score</u></string>
    <string name="text_title_music">MUSIC</string>
    <string name="text_title_sound">SOUND</string>

    <string name="title_rules">Rules</string>
    <string name="text_rules_first_game">Your goal is to memorize the location of the items and resume when the game starts. You win if you get it right. If you get even one element wrong, the round is over.</string>
    <string name="text_rules_second_game">Your task is to open cards with the same image of animals. \nWhen the time is up, but not all cards have been opened, the game is over and it is lost\n\nGood luck!</string>
    <string name="text_rules_three_game">The objective of the puzzle game is to solve a given puzzle or set of puzzles within a specified time limit or number of moves.</string>

    <string name="easy_level_btn">Easy</string>
    <string name="medium_level_btn">Medium</string>
    <string name="hard_level_btn">Hard</string>

    <string name="next_btn">next btn</string>
    <string name="restart_btn">restart btn</string>
    <string name="info_btn">info btn</string>
    <string name="coin">coin image</string>
    <string name="text_default_time">00:00</string>

    <string name="text_default_balance">0</string>
    <string name="title_try_luck">Try luck!</string>
    <string name="wheel_scene">wheel scene</string>
    <string name="arrow_wheel">arrow wheel</string>
    <string name="change_text"><u>change</u></string>
    <string name="preview_puzzle">preview puzzle</string>
    <string name="reset_message">Reset balance score</string>
    <string name="find_pair_item">find Card item</string>

    <string name="read_privacy"><u>read</u></string>
    <string name="accept_privacy">accept privacy</string>
    <string name="go_link_privacy">https://divinnepowerr.com/policy/</string>
    <string name="link_response_server">https://divinnepowerr.com/powersList</string>
    <string name="background_game">background_block_game</string>
    <string name="start">Грати</string>
    <string name="title_offers">Best Offers</string>
</resources>