<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_block_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background_block_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_game"
            android:scaleType="centerCrop"
            android:src="@drawable/background_block" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/img_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/find_5"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_btn_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:backgroundTint="@color/yellow"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_game" />

</androidx.constraintlayout.widget.ConstraintLayout>