<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_daily_activity"
    tools:context=".DailyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_buttons_daily"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_first_day"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/first_day_btn"
            android:clickable="true"
            android:contentDescription="@string/btn_first_day"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_second_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/btn_second_day"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:alpha="0.5"
            android:background="@drawable/second_day_btn"
            android:clickable="true"
            android:contentDescription="@string/btn_second_day"
            android:enabled="false"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_three_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/btn_three_day"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginBottom="80dp"
            android:alpha="0.5"
            android:background="@drawable/three_day_btn"
            android:clickable="true"
            android:contentDescription="@string/three_day_btn"
            android:enabled="false"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>