<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_find_cards_game_fragment"
    tools:context=".view.games.findcards.FindCardsGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_status_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/back_btn"
            android:clickable="true"
            android:contentDescription="@string/back_btn"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/status_balance"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_balance"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_info"
            app:layout_constraintStart_toEndOf="@+id/btn_home"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/im_fell_double_pica"
                android:text="@string/text_default_balance"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp30"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/info_btn"
            android:clickable="true"
            android:contentDescription="@string/info_btn"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_title_try_luck"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_text"
        android:fontFamily="@font/im_fell_double_pica"
        android:padding="10dp"
        android:text="@string/title_try_luck"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp64"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_status_bar" />

    <include
        android:id="@+id/timer_counter"
        layout="@layout/timer_progress_bar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scene_find_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/control_status_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/block_wheel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/background_block"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_try_luck">

        <ImageView
            android:id="@+id/wheel"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/wheel_scene"
            android:src="@drawable/background_wheel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/arrow_wheel"
            android:src="@drawable/arrow_wheel"
            app:layout_constraintBottom_toBottomOf="@+id/wheel"
            app:layout_constraintEnd_toEndOf="@+id/wheel"
            app:layout_constraintStart_toStartOf="@+id/wheel"
            app:layout_constraintTop_toTopOf="@+id/wheel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scene_find_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp10"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_status_bar" />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/next_btn"
        android:clickable="true"
        android:contentDescription="@string/next_btn"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btn_go"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/go_btn"
        android:clickable="true"
        android:contentDescription="@string/next_btn"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>